Fix alignment when smallest
Also added some content to projects.

--- a/css/index.css
+++ b/css/index.css
@@ -58,6 +58,8 @@ body
 	float: left;
 	max-width: 200px !important;
 	min-width: 200px !important;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #sidebar .section
@@ -70,6 +72,18 @@ body
 {
 	float: left;
 	margin-left: 100px;
+	width: 100%;
+}
+
+#pagecontent h2
+{
+	border-bottom: solid 1px #949494;
+	width: 100%;
+}
+
+#pagecontent img
+{
+   border:1px solid #949494;
 }
 
 #blurb
